# EspNowNetwork

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  library.json  library.properties
.github/workflows/: clang-format.yaml  esp_upload_component.yaml  esp_upload_component_full.yaml  esp_upload_component_host.yaml  esp_upload_component_host_driver.yaml  esp_upload_component_node.yaml  espidf.yaml  platformio.yaml  platformio_publish.yaml  platformio_publish_full.yaml  platformio_publish_host.yaml  platformio_publish_host_driver.yaml  platformio_publish_node.yaml  pr.yaml  test.yaml
EspNowNetwork/: idf_component.yml
EspNowNetworkHost/: CMakeLists.txt  idf_component.yml  library.json
EspNowNetworkHostDriver/: CMakeLists.txt  idf_component.yml  library.json
EspNowNetworkNode/: CMakeLists.txt  idf_component.yml  library.json
espidf-host-only/: CMakeLists.txt  idf_component.yml
espidf-node-only/: CMakeLists.txt
examples/Host/: Host.ino
examples/Node/: Node.ino
examples/arduino/host/: Host.ino
examples/arduino/host_driver/: DeviceFootPedal.cpp  HostDriver.ino  esp-now-device-structs.h
examples/arduino/host_with_configuration/: Host.ino
examples/arduino/node/: Node.ino
examples/arduino/node_with_configuration/: Node.ino
examples/espidf/host/main/: idf_component.yml  main.cpp
examples/espidf/host_driver/main/: DeviceFootPedal.cpp  DeviceFootPedal.h  idf_component.yml  main.cpp
examples/espidf/node/: sdkconfig.defaults
examples/espidf/node/main/: idf_component.yml  main.cpp
firmware http server/: Dockerfile  README.md  main.py  upload.py
host_driver/: Device.h  DeviceManager.h  FirmwareChecker.h  FirmwareCheckerUtils.h  IDeviceManager.h  IFirmwareChecker.h  IMQTTRemote.h
host_driver/impl/: DeviceManager.cpp  FirmwareChecker.cpp
integration/: partitions_with_ota.csv
integration/arduino/: Integration.ino
integration/espidf/main/: main.cpp
integration/main/: idf_component.yml  main.cpp
src/: EspNowCrypt.h  EspNowHost.h  EspNowNetwork.cpp  EspNowNetwork.h  EspNowNode.h  EspNowPreferences.h  Preferences.h  RingBuf.h
src/host/: EspNowHost.h
src/host/impl/: EspNowHost.cpp
src/host_driver/: DeviceManager.h  DeviceUtils.h  FirmwareChecker.h  FirmwareCheckerUtils.h  FirmwareKicker.h  HostDriver.h  IDeviceManager.h  IFirmwareChecker.h  IFirmwareKicker.h
src/host_driver/impl/: DeviceManager.cpp  FirmwareChecker.cpp  FirmwareKicker.cpp  HostDriver.cpp
src/impl/: EspNowCrypt.cpp  EspNowHost.cpp  EspNowNode.cpp  EspNowOta.cpp  EspNowOta.h  EspNowPreferences.cpp  esp-now-structs.h
src/node/: EspNowMD5Builder.h  EspNowNode.h  EspNowPreferences.h  Preferences.h
src/node/impl/: EspNowMD5Builder.cpp  EspNowNode.cpp  EspNowOta.cpp  EspNowPreferences.cpp
src/shared/: esp-now-config.h  esp-now-structs.h
